# winevt-kb

./: .gitignore  .pylintrc  .travis.yml  ACKNOWLEDGEMENTS  AUTHORS  MANIFEST.in  MANIFEST.test_data.in  README  README.md  appveyor.yml  collector.py  database.py  dependencies.ini  export.py  extract.py  message_strings.py  pyproject.toml  query.py  requirements.txt  resources.py  run_tests.py  setup.cfg  setup.py  tox.ini  winevt-kb.ini
.github/workflows/: lint.yml  test_docker.yml  test_docs.yml  test_tox.yml  test_windows.yml
config/appveyor/: install.ps1
config/dpkg/: changelog  clean  control  python3-winevtrc.install  rules
config/pylint/: spelling-private-dict
config/travis/: install.sh  run_coverage.sh  run_pylint.sh  runtests.sh
docs/: conf.py  index.rst
docs/sources/api/: modules.rst  winevtrc.rst
docs/sources/eventlog-providers/: Provider-.NET-Runtime-Optimization-Service.md  Provider-.NET-Runtime.md  Provider-3ware.md  Provider-ACPI.md  Provider-ADP80XX.md  Provider-AFD.md  Provider-ASP.NET-2.0.50727.0.md  Provider-ASP.NET-4.0.30319.0.md  Provider-AeLookupSvc.md  Provider-Alerter.md  Provider-AmdK8.md  Provider-AmdPPM.md  Provider-AppReadiness.md  Provider-AppleSSD.md  Provider-Application-Addon-Event-Provider.md  Provider-Application-Error.md  Provider-Application-Hang.md  Provider-Application-Management-Group-Policy.md  Provider-Application-Management.md  Provider-Application-Popup.md  Provider-Application.md  Provider-AsyncMac.md  Provider-Atmarpc.md  Provider-AutoEnrollment.md  Provider-Autochk.md  Provider-BITS.md  Provider-BTHPORT.md  Provider-BTHUSB.md  Provider-BasicDisplay.md  Provider-BasicRender.md  Provider-Bowser.md  Provider-Browser.md  Provider-BthEnum.md  Provider-BthLEEnum.md  Provider-BthMini.md  Provider-BugCheck.md  Provider-COM+.md  Provider-COM.md  Provider-CardSpace-3.0.0.0.md  Provider-CardSpace-4.0.0.0.md  (+1656 more)
docs/sources/message-files/: MessageFile-aadcloudap.dll.md  MessageFile-accountaccessor.dll.md  MessageFile-accountsrt.dll.md  MessageFile-aclui.dll.md  MessageFile-acpi.sys.md  MessageFile-acpiec.sys.md  MessageFile-acres.dll.md  MessageFile-actioncenter.dll.md  MessageFile-actioncentercpl.dll.md  MessageFile-actionqueue.dll.md  MessageFile-activesynccsp.dll.md  MessageFile-activesyncprovider.dll.md  MessageFile-adsldpc.dll.md  MessageFile-adtschema.dll.md  MessageFile-advapi32.dll.md  MessageFile-aeevts.dll.md  MessageFile-aelupsvc.dll.md  MessageFile-afd.sys.md  MessageFile-agilevpn.sys.md  MessageFile-agp440.sys.md  MessageFile-ajrouter.dll.md  MessageFile-alttab.dll.md  MessageFile-amsi.dll.md  MessageFile-apds.dll.md  MessageFile-aphostres.dll.md  MessageFile-apilogen.dll.md  MessageFile-apphelp.dll.md  MessageFile-appidapi.dll.md  MessageFile-appinfo.dll.md  MessageFile-appmgmts.dll.md  MessageFile-appmgr.dll.md  MessageFile-appointmentapis.dll.md  MessageFile-appraiser.dll.md  MessageFile-appreadiness.dll.md  MessageFile-appsruprov.dll.md  MessageFile-appvclienteventlog.dll.md  MessageFile-appvetwclientres.dll.md  MessageFile-appvetwsharedperformance.dll.md  MessageFile-appvetwstreamingux.dll.md  MessageFile-appwiz.cpl.md  (+1074 more)
scripts/: collector.py  database.py  eventlog_providers.py  export.py  extract.py  process_tree.py  query.py  resources.py  wevt_template.py
test_data/: SYSTEM  defragsvc.dll.db  message_file.db  winevt-kb.db
tests/: __init__.py  database.py  dependencies.py  dfvfs_helpers.py  environment_variables.py  eventlog_providers.py  exporter.py  extractor.py  file_system.py  language_tags.py  py2to3.py  resource_file.py  resources.py  storage.py  string_formatter.py  test_lib.py
utils/: check_dependencies.py  dependencies.py  update_dependencies.py  update_release.sh  update_version.sh
winevtrc/: __init__.py  collector.py  database.py  definitions.py  dependencies.py  dfvfs_helpers.py  documentation.py  environment_variables.py  errors.py  eventlog_providers.py  exporter.py  extractor.py  language_tags.py  resource_file.py  resources.py  storage.py  string_formatter.py  versions.py
winevtrc/scripts/: eventlog_providers.py  export.py  extract.py  process_tree.py  query.py  wevt_template.py
