[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "winevtrc"
version = "20251126"
description = "Windows Event Log resources (winevtrc)"
maintainers = [
    { name = "Joachim Metz", email = "joachim.metz@gmail.com" },
]
license = "Apache-2.0"
license-files = ["ACKNOWLEDGEMENTS", "AUTHORS", "LICENSE"]
readme = "README.md"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python",
]
requires-python = ">=3.10"
dependencies = [
    "PyYAML >= 3.10",
    "acstore >= 20230101",
    "artifacts >= 20220219",
    "dfdatetime >= 20221112",
    "dfimagetools >= 20220129",
    "dfvfs >= 20240115",
    "dfwinreg >= 20211207",
    "dtfabric >= 20230518",
    "libbde-python >= 20220121",
    "libcaes-python >= 20240114",
    "libcreg-python >= 20200725",
    "libevt-python >= 20120410",
    "libevtx-python >= 20141112",
    "libewf-python >= 20131210",
    "libexe-python >= 20131229",
    "libfcrypto-python >= 20240114",
    "libfsapfs-python >= 20220709",
    "libfsext-python >= 20220829",
    "libfsfat-python >= 20220925",
    "libfshfs-python >= 20220831",
    "libfsntfs-python >= 20211229",
    "libfsxfs-python >= 20220829",
    "libfvde-python >= 20220121",
    "libfwevt-python >= 20240101",
    "libfwnt-python >= 20210717",
    "libluksde-python >= 20220121",
    "libmodi-python >= 20210405",
    "libphdi-python >= 20220228",
    "libqcow-python >= 20201213",
    "libregf-python >= 20201002",
    "libsigscan-python >= 20230109",
    "libsmdev-python >= 20140529",
    "libsmraw-python >= 20140612",
    "libvhdi-python >= 20201014",
    "libvmdk-python >= 20140421",
    "libvsapm-python >= 20230506",
    "libvsgpt-python >= 20211115",
    "libvshadow-python >= 20160109",
    "libvslvm-python >= 20160109",
    "libwrc-python >= 20220104",
    "pytsk3 >= 20210419",
    "xattr >= 0.7.2 ; platform_system != \"Windows\"",
]

[project.scripts]
eventlog_providers = "winevtrc.scripts.eventlog_providers:Main"
export = "winevtrc.scripts.export:Main"
extract = "winevtrc.scripts.extract:Main"
process_tree = "winevtrc.scripts.process_tree:Main"
query = "winevtrc.scripts.query:Main"
wevt_template = "winevtrc.scripts.wevt_template:Main"

[project.urls]
Documentation = "https://winevtrc.readthedocs.io/en/latest"
Homepage = "https://github.com/libyal/winevt-kb"
Repository = "https://github.com/libyal/winevt-kb"

[tool.setuptools.packages.find]
where = ["."]
include = ["winevtrc"]
exclude = ["docs", "tests", "tests.*", "utils"]
