[metadata]
name = winevtrc
version = 20240304
description = Windows Event Log resources (winevtrc)
long_description = winevtrc is a Python module part of winevt-kb to allow easy reuse of the Windows Event Log resource extraction and database functionality.
long_description_content_type = text/plain
url = https://github.com/libyal/winevt-kb
maintainer = Joachim Metz
maintainer_email = joachim.metz@gmail.com
license = Apache License, Version 2.0
license_files =
  ACKNOWLEDGEMENTS
  AUTHORS
  LICENSE
  README
classifiers =
  Development Status :: 2 - Pre-Alpha
  Programming Language :: Python

[options]
install_requires = file:requirements.txt
package_dir =
  winevtrc = winevtrc
packages = find:
python_requires = >=3.8
scripts =
  scripts/eventlog_providers.py
  scripts/export.py
  scripts/extract.py
  scripts/process_tree.py
  scripts/query.py
  scripts/wevt_template.py

[options.packages.find]
exclude =
  docs
  tests
  tests.*
  utils
where = .

[sdist]
template = MANIFEST.in
manifest = MANIFEST

[sdist_test_data]
template = MANIFEST.test_data.in
manifest = MANIFEST.test_data

[bdist_wheel]
universal = 1
