[metadata]
name = winevtrc
version = 20240331
description = Windows Event Log resources (winevtrc)
long_description = winevtrc is a Python module part of winevt-kb to allow easy reuse of the Windows Event Log resource extraction and database functionality.
long_description_content_type = text/plain
url = https://github.com/libyal/winevt-kb
maintainer = Joachim Metz
maintainer_email = joachim.metz@gmail.com
license = Apache License, Version 2.0
license_files =
  ACKNOWLEDGEMENTS
  AUTHORS
  LICENSE
  README
classifiers =
  Development Status :: 2 - Pre-Alpha
  Programming Language :: Python

[options]
install_requires = file:requirements.txt
package_dir =
  winevtrc = winevtrc
packages = find:
python_requires = >=3.8

[options.entry_points]
console_scripts =
  eventlog_providers = winevtrc.scripts.eventlog_providers:Main
  export = winevtrc.scripts.export:Main
  extract = winevtrc.scripts.extract:Main
  process_tree =  winevtrc.scripts.process_tree:Main
  query = winevtrc.scripts.query:Main
  wevt_template = winevtrc.scripts.wevt_template:Main

[options.packages.find]
exclude =
  docs
  tests
  tests.*
  utils
where = .

[bdist_wheel]
universal = 1
